# prof_gui

./: .dockerignore  .gitignore  CHANGELOG.md  README.md  deploy.sh  dockerfile.py  dockerfile.rs  profile.json  prompt.py
backend/rust/src/: main.rs
docker/: dockerfile.py  dockerfile.rs
python/: app.py
rust/: Cargo.toml
rust/src/: main.rs
static/: script.js  styles.css
templates/: index.html
ui/: app.py
ui/static/: script.js  styles.css
ui/templates/: index.html
