[package]
name = "prof_gui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "prof_gui"
path = "src/main.rs"

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.20"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["fs"] }